# MultiFL

./: README.md
multifl/: .gitignore  pyproject.toml
multifl/multifl/: __init__.py  client_app.py  dataloader.py  models.py  server_app.py  task.py
multimodal-baseline/: README.md  pyproject.toml
multimodal-baseline/multifl/: client_app.py  dataloader.py  task.py
multimodal-centralised/: main.py  models.py
multimodal-missing-modalities/: pyproject.toml
multimodal-missing-modalities/multifl/: __init__.py  client_app.py  strategy.py  task.py  utils.py
multimodal-partial-aggregation/: pyproject.toml
multimodal-partial-aggregation/multifl/: client_app.py  server_app.py  strategy.py  task.py  utils.py
