[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multifl"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.15.2",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "pranav"

[tool.flwr.app.components]
serverapp = "multifl.server_app:app"
clientapp = "multifl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 100
fraction-fit = 1
local-epochs = 2

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.5